--- a/practicas/easy_food/pubspec.yaml
+++ b/practicas/easy_food/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.6 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,10 +32,39 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: any
+  auto_size_text: 3.0.0
+  cached_network_image: 3.2.1
+  firebase_auth: 4.2.0
+  firebase_auth_platform_interface: 6.11.4
+  firebase_auth_web: 5.2.0
+  firebase_core: 2.4.0
+  firebase_core_platform_interface: 4.5.2
+  firebase_core_web: 2.0.2
+  flutter_animate: 1.0.0
+  flutter_cache_manager: 3.3.0
+  font_awesome_flutter: 10.1.0
+  from_css_color: 2.0.0
+  google_fonts: 3.0.1
+  google_sign_in: 5.4.0
+  google_sign_in_ios: 5.4.0
+  google_sign_in_platform_interface: 2.2.0
+  google_sign_in_web: 0.10.2
+  intl: 0.17.0
+  json_path: 0.4.1
+  page_transition: 2.0.4
+  plugin_platform_interface: 2.1.3
+  provider: 6.0.4
+  rxdart: 0.27.4
+  shared_preferences: 2.0.15
+  sign_in_with_apple: 4.1.0
+  sign_in_with_apple_platform_interface: 1.0.0
+  sign_in_with_apple_web: 1.0.1
+  sqflite: 2.2.0+2
+  timeago: 3.2.2
+  url_launcher: 6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +82,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
